--- a/PeopleApp/Views/Shared/_Layout.cshtml
+++ b/PeopleApp/Views/Shared/_Layout.cshtml
@@ -26,18 +26,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PeopleApp</a>
+                <a asp-area="" asp-controller="People" asp-action="Index" class="navbar-brand">Address Book</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">+Add Person</a></li>
+                    <li><a asp-area="" asp-controller="People" asp-action="Create">+Add Person</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container body-content">
         @RenderBody()
-        <hr />
+
         <footer>
             <p>&copy; 2017</p>
         </footer>
