--- a/PeopleApp/Views/People/Edit.cshtml
+++ b/PeopleApp/Views/People/Edit.cshtml
@@ -64,17 +64,17 @@
         <div class="form-group">
             <label asp-for="Interests" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Interests" class="form-control" />
+                <textarea asp-for="Interests" class="form-control" ></textarea>
                 <span asp-validation-for="Interests" class="text-danger"></span>
             </div>
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
             <label asp-for="Photo" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="Photo" class="form-control" />
                 <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
-        </div>
+        </div>-->
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -84,7 +84,7 @@
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Address Book</a>
 </div>
 
 @section Scripts {
